<resources>
    <string name="app_name">OurCityDeals</string>
    <string name="action_settings">Settings</string>

    <string name="reg_Name">Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_phone">Mobile Number</string>
    <string name="reg_password">Password</string>
    <string name="reg_re_password">Re-enter Password</string>
    <string name="reg_referral_code">Referral Code (Optional)</string>
    <string name="reg_btn_text">SIGNUP</string>
    <string name="ver_btn_text">VERIFY</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="exist_user_btn_text">EXISTING USER LOGIN</string>
    <string name="update_available_text">Newer Version Available!</string>
    <string name="update_version_message">Do you want to download new version?</string>

    <string name="rs">\u20B9</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_phoneno">Enter the Phone Number</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="booking_confirm">Your order is processed.</string>
    <string name="ex">XXXXX</string>
    <string name="orderid">000000</string>

    <string name="text_payment_success">Thank You! Your order is successfully placed.</string>
    <string name="text_payment_failure">Failure</string>
    <string name="text_transaction_id">Order ID</string>
    <string name="text_error_transaction_id">Error ID</string>
    <string name="text_amount_paid">Cash On Delivery</string>
    <string name="text_error_message">Error Message</string>
</resources>
